optimize css file

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
     </section>
     <!-- end stats -->
     <!-- start discount -->
-    <section class="discount">
+    <section class="discount" id="discount">
         <div class="info">
             <h2>We Have A Discount</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae
@@ -785,69 +785,69 @@
     <!-- start footer -->
     <footer>
         <div class="container">
-                <div class="info">
-                    <h2>Amir</h2>
-                    <ul>
-                        <li>
-                            <a href="https://www.facebook.com/profile.php?id=100024369041779">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/MdAmirSoulei">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/profile.php?id=100024369041779">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste
-                        aspernatur</p>
-                </div>
-                <ul class="links">
-                    <li><a href="#">important links</a></li>
-                    <li><a href="#">important links</a></li>
-                    <li><a href="#">important links</a></li>
-                    <li><a href="#">important links</a></li>
-                    <li><a href="#">important links</a></li>
+            <div class="info">
+                <h2>Amir</h2>
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/profile.php?id=100024369041779">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/MdAmirSoulei">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/profile.php?id=100024369041779">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
                 </ul>
-                <div class="lines">
-                    <div class="line">
-                        <i class="fas fa-map-marker-alt fa-fw"></i>
-                        <div class="info">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
-                    </div>
-                    <div class="line">
-                        <i class="far fa-clock fa-fw"></i>
-                        <div class="info">Business Hours: From 10:00 To 18:00</div>
-                    </div>
-                    <div class="line">
-                        <i class="fas fa-phone-volume fa-fw"></i>
-                        <div class="info">+20123456789 <br> +20198765432</div>
-                    </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste
+                    aspernatur</p>
+            </div>
+            <ul class="links">
+                <li><a href="#">important links</a></li>
+                <li><a href="#">important links</a></li>
+                <li><a href="#">important links</a></li>
+                <li><a href="#">important links</a></li>
+                <li><a href="#">important links</a></li>
+            </ul>
+            <div class="lines">
+                <div class="line">
+                    <i class="fas fa-map-marker-alt fa-fw"></i>
+                    <div class="info">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
                 </div>
-                <div class="images">
-                    <div class="image">
-                        <img src="images/gallery-01.png" alt="">
-                    </div>
-                    <div class="image">
-                        <img src="images/gallery-02.png" alt="">
-                    </div>
-                    <div class="image">
-                        <img src="images/gallery-03.jpg" alt="">
-                    </div>
-                    <div class="image">
-                        <img src="images/gallery-04.png" alt="">
-                    </div>
-                    <div class="image">
-                        <img src="images/gallery-05.jpg" alt="">
-                    </div>
-                    <div class="image">
-                        <img src="images/gallery-06.png" alt="">
-                    </div>
+                <div class="line">
+                    <i class="far fa-clock fa-fw"></i>
+                    <div class="info">Business Hours: From 10:00 To 18:00</div>
                 </div>
+                <div class="line">
+                    <i class="fas fa-phone-volume fa-fw"></i>
+                    <div class="info">+20123456789 <br> +20198765432</div>
+                </div>
+            </div>
+            <div class="images">
+                <div class="image">
+                    <img src="images/gallery-01.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="images/gallery-02.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="images/gallery-03.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="images/gallery-04.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="images/gallery-05.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="images/gallery-06.png" alt="">
+                </div>
+            </div>
         </div>
         <p>Made By Amir</p>
     </footer>
